# gen/http/chargewatch/server/encode_decode.go
@@ -17,6 +17,18 @@ import (
 	goa "goa.design/goa/v3/pkg"
 )
 
+// EncodeHealthcheckResponse returns an encoder for responses returned by the
+// chargewatch healthcheck endpoint.
+func EncodeHealthcheckResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
+	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
+		res := v.(string)
+		enc := encoder(ctx, w)
+		body := res
+		w.WriteHeader(http.StatusOK)
+		return enc.Encode(body)
+	}
+}
+
 // EncodeListDevicesResponse returns an encoder for responses returned by the
 // chargewatch listDevices endpoint.
 func EncodeListDevicesResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
